--- a/app/src/main/res/xml/method.xml
+++ b/app/src/main/res/xml/method.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <input-method
+    android:isDefault="true"
     android:settingsActivity="com.redkey.keyboard.ui.main.MainActivity"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
